# ChangeLog for media-libs/libdv
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libdv/ChangeLog,v 1.24 2004/01/17 05:32:38 darkspecter Exp $

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> libdv-0.99-r1.ebuild:
  set ppc in keywords

  20 Dec 2003; Guy Martin <gmsoft@gentoo.org> libdv-0.99-r1.ebuild:
  Marked stable on hppa.

  23 Nov 2003; Aron Griffis <agriffis@gentoo.org> libdv-0.99-r1.ebuild:
  Stable on alpha

  20 Sep 2003; Max Kalika <max@gentoo.org> libdv-0.99-r1.ebuild,
  libdv-0.99.ebuild:
  Bump 0.99-r1 to stable on x86 and amd64. Clean up broken version.

  10 Sep 2003; Max Kalika <max@gentoo.org> libdv-0.99-r1.ebuild,
  files/libdv-0.99-disablegtk.patch:
  Re-add dev-util/pkgconfig to DEPEND and add -lXext to the Xv check of the
  disablegtk patch. Fixes bug 27139. Thanks to Marc Bevand for the suggestion.

  25 Aug 2003; Max Kalika <max@gentoo.org> libdv-0.99-r1.ebuild,
  files/libdv-0.99-disablegtk.patch:
  Fix patch to detect libXv properly. Remove dependency on pkgconfig. Remove
  dependency on glib (pulled by gtk+ already). Add debug to IUSE.

  21 Aug 2003; Max Kalika <max@gentoo.org> libdv-0.99-r1.ebuild:
  Use more portage internals.

*libdv-0.99-r1 (20 Aug 2003)

  20 Aug 2003; Alastair Tse <liquidx@gentoo.org> libdv-0.99-r1.ebuild,
  files/libdv-0.99-disablegtk.patch:
  applied patches thanks to Christian Jiresjö <slaugther@linux.nu> (#730)
  to allow disable gtk support properly.

  18 Aug 2003; Max Kalika <max@gentoo.org> libdv-0.99.ebuild:
  Configure couldn't complete if gtk isn't installed, so added
  =x11-libs/gtk-1.2* to DEPEND. Other cleanups.

  11 Jul 2003; Martin Holzer <mholzer@gentoo.org> libdv-0.99.ebuild:
  Marked stable on x86.

*libdv-0.99 (05 Apr 2003)

  05 Apr 2003; Martin Holzer <mholzer@gentoo.org> libdv-0.99.ebuild:
  Version bumped. Closes #18804. Also enabled xv since in ChangeLog it's now
  fixed. Also added some dodoc.
