@@ -1,6 +1,6 @@
-MD5 966ecdaff1845374bd1421f7bdcea2a0 ChangeLog 2909
+MD5 444e8a60e5111aca62898b206e68590a libquicktime-0.9.2.ebuild 1573
 MD5 cc1dce5eaa7a737492ba4b29834dc73c libquicktime-0.9.2_pre1.ebuild 1552
-MD5 af72d9de35f9959cd7cb2347997d3b6d libquicktime-0.9.2.ebuild 1577
-MD5 a21827ef08966b853edaad08db2f0b17 files/digest-libquicktime-0.9.2_pre1 150
+MD5 d99173fc43b45b6a586f1a6602b0c134 ChangeLog 2989
 MD5 abf06ed2bfc6e4b130b44e3818ec0c99 files/digest-libquicktime-0.9.2 70
 MD5 7431f4892f67adb233bef504876078db files/libquicktime-0.9.2-amd64.patch 2861
+MD5 a21827ef08966b853edaad08db2f0b17 files/digest-libquicktime-0.9.2_pre1 150
