@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdv
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdv/ChangeLog,v 1.24 2004/01/17 05:32:38 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdv/ChangeLog,v 1.25 2004/01/29 18:13:17 gustavoz Exp $
+
+  29 Jan 2004; <gustavoz@gentoo.org> libdv-0.99-r1.ebuild:
+  stable on sparc
 
   16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> libdv-0.99-r1.ebuild:
   set ppc in keywords
